// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`betterer ci > should work when a test is already complete 1`] = `
"// BETTERER RESULTS V2.
//
// If this file contains merge conflicts, use \`betterer merge\` to automatically resolve them:
// https://phenomnomnominal.github.io/betterer/docs/results-file/#merge
//
exports[\`test\`] = {
  value: \`{
    "src/index.ts:1499252024": [
      [2, 12, 1, "tsc: The left-hand side of an arithmetic operation must be of type \\'any\\', \\'number\\', \\'bigint\\' or an enum type.", "177604"]
    ]
  }\`
};
"
`;

exports[`betterer ci > should work when a test is already complete 2`] = `
"// BETTERER RESULTS V2.
//
// If this file contains merge conflicts, use \`betterer merge\` to automatically resolve them:
// https://phenomnomnominal.github.io/betterer/docs/results-file/#merge
//
exports[\`test\`] = {
  value: \`{}\`
};
"
`;

exports[`betterer ci > should work when a test is already complete 3`] = `
[
  "🌟 Betterer (0ms):
",
  "🌟 Betterer (0ms): 1 test running...
🤔 test: running "test"!
",
  "🎉 Betterer (0ms): 1 test done!
✅ test: "test" got checked for the first time! (1 issue) 🎉
",
  "🎉 Betterer (0ms): 1 test done!
✅ test: "test" got checked for the first time! (1 issue) 🎉

1 test got checked. 🤔
1 test got checked for the first time! 🎉
",
  "🌟 Betterer (0ms):
",
  "🌟 Betterer (0ms): 1 test running...
🤔 test: running "test"!
",
  "🎉 Betterer (0ms): 1 test done!
✅ test: "test" met its goal! 🎉
・ 1 fixed issue in "fixtures/ci-complete/src/index.ts".
",
  "🎉 Betterer (0ms): 1 test done!
✅ test: "test" met its goal! 🎉
・ 1 fixed issue in "fixtures/ci-complete/src/index.ts".

1 test got checked. 🤔
1 test got better! 😍
1 test met its goal! 🎉
",
  "🎉 Betterer (0ms): 1 test done!
✅ test: "test" has already met its goal! ✨

1 test got checked. 🤔
1 test met its goal! 🎉
",
]
`;

exports[`betterer ci > should work when a test is already complete 4`] = `
"// BETTERER RESULTS V2.
//
// If this file contains merge conflicts, use \`betterer merge\` to automatically resolve them:
// https://phenomnomnominal.github.io/betterer/docs/results-file/#merge
//
exports[\`test\`] = {
  value: \`{}\`
};
"
`;
